# storm-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.py  conanfile.txt
.github/workflows/: ci_linux.yml  cibuild.yml
cmake/: StormSetup.cmake  conan.cmake  linux.cmake
nine-native/include/: nine_sdl.h
nine-native/include/D3D9/: d3d9.h  d3d9types.h
nine-native/src/: dri3.c  dri3.h  nine_sdl.c
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ENGINE/: CMakeLists.txt  Core.cpp  Main.cpp  file_service.cpp  ifs.cpp  internal_functions.cpp  s_dbg_sourceview.cpp  s_debug.cpp
src/apps/ENGINE/src/: Core.cpp  Main.cpp  compiler.cpp  compiler.h  data.cpp  data.h  expression.cpp  file_service.cpp  file_service.h  ifs.cpp  ifs.h  internal_functions.cpp  s_dbg_breaktable.cpp  s_dbg_sourceview.cpp  s_dbg_sourceview.h  s_dbg_watcherlist.cpp  s_dbg_watcherlist.h  s_debug.cpp  s_deftab.cpp  s_eventmsg.h  s_eventtab.cpp  string_codec.h  strings_list.cpp  tm_list.cpp  token.cpp  token.h
src/apps/Setup/: CMakeLists.txt
src/apps/engine/: CMakeLists.txt
src/apps/engine/src/: compiler.cpp  core_impl.cpp  core_impl.h  data.cpp  file_service.cpp  file_service.h  ifs.cpp  internal_functions.cpp  main.cpp  s_dbg_breaktable.cpp  s_dbg_sourceview.cpp  s_debug.cpp  tm_list.cpp  token.cpp
src/libs/Animals/: CMakeLists.txt
src/libs/Artifact/: CMakeLists.txt
src/libs/Ballsplash/: CMakeLists.txt
src/libs/Common/: CMakeLists.txt
src/libs/Common/include/: Animation.h  Attributes.h  Character.h  Entity.h  EntityManager.h  Island_Base.h  Matrix.h  PtcData.h  Weather_Base.h  attributes.h  collide.h  controls.h  core.h  defines.h  dx9render.h  entity_state.h  geometry.h  math3D.h  message.h  model.h  object.h  rands.h  ship_base.h  storm_assert.h  stringService.h  utf8.h  vdata.h  vfile_service.h  vmodule_api.h  vparticle_system.h
src/libs/Common_h/: CMakeLists.txt  defines.h  dx9render.h
src/libs/Input/include/: Input.hpp
src/libs/Input/src/: SDLInput.cpp  SDLInput.hpp
src/libs/Island/: ISLAND.cpp
src/libs/Location/: Grass.cpp  LocationScriptLib.cpp
src/libs/Peoples_on_ship/: CMakeLists.txt
src/libs/Sailors/: Sailors.h
src/libs/Sea_operator/: CMakeLists.txt
src/libs/Sink_effect/: CMakeLists.txt
src/libs/SoundService/: CMakeLists.txt
src/libs/WaterRings/: CMakeLists.txt
src/libs/Window/src/: SDLWindow.cpp  SDLWindow.hpp
src/libs/Xinterface/: xinterface.cpp
src/libs/Xinterface/Nodes/: xi_VImgScroll.cpp  xi_VImgScroll.h  xi_scrollimage.cpp  xi_scrollimage.h
src/libs/Xinterface/Stringservice/: strservice.cpp
src/libs/animals/: CMakeLists.txt
src/libs/animals/src/: TButterflies.cpp  TButterflies.h  TButterfly.cpp  TButterfly.h  TFishSchools.cpp  TFishSchools.h  TSeagulls.cpp  TSeagulls.h
src/libs/animation/src/: ActionInfo.cpp  ActionInfo.h  ActionPlayerImp.cpp  ActionPlayerImp.h  AnimationImp.cpp  AnimationImp.h  AnimationInfo.cpp  AnimationInfo.h  AnimationServiceImp.cpp  AnimationServiceImp.h  AnimationTimerImp.cpp  AnimationTimerImp.h  Bone.cpp  Bone.h  action_info.cpp  action_player_imp.cpp  animation_imp.cpp  animation_info.cpp  animation_service_imp.cpp  bone.cpp
src/libs/ball_splash/src/: BallSplash.h  TSplash.cpp  TSplash.h  ball_splash_defines.h
src/libs/battle_interface/src/: ActivePerkShower.cpp  LogAndAction.cpp  LogAndAction.h  MessageIcons.cpp  Utils.cpp  Utils.h  active_perk_shower.cpp  battle_command.cpp  battle_command.h  battle_sign.cpp  bi_defines.h  log_and_action.cpp  utils.cpp
src/libs/blade/src/: blade.cpp  blade.h
src/libs/blot/src/: Blots.cpp  Blots.h
src/libs/collide/src/: local_collide.cpp
src/libs/common/: CMakeLists.txt
src/libs/common/include/: animation.h  attributes.h  c_vector.h  c_vector4.h  controls.h  defines.h  dx9render.h  entity_manager.h  geometry.h  geos.h  inlines.h  math3d.h  matrix.h  message.h  storm_assert.h  storm_d3dx9.h  storm_d3dx9effect.h  storm_platform.h  v_file_service.h  v_module_api.h
src/libs/common/src/: attributes.cpp
src/libs/core/: CMakeLists.txt
src/libs/core/include/: core.h  file_service.h  v_file_service.h
src/libs/core/src/: compiler.cpp  compiler.h  core_impl.cpp  core_impl.h  data.cpp  file_service.cpp  ifs.cpp  ifs.h  internal_functions.cpp  s_dbg_breaktable.cpp  s_dbg_sourceview.cpp  s_dbg_watcherlist.cpp  s_dbg_watcherlist.h  s_debug.cpp  s_debug.h  s_deftab.cpp  s_deftab.h  s_eventtab.cpp  s_eventtab.h  s_functab.cpp  s_functab.h  s_vartab.h  string_codec.h  strings_list.cpp  strings_list.h  tm_list.cpp  token.cpp  token.h
src/libs/diagnostics/: CMakeLists.txt
src/libs/diagnostics/src/: LifecycleDiagnosticsService.cpp  lifecycle_diagnostics_service.cpp
src/libs/dialog/src/: dialog.cpp  dialog.h
src/libs/geometry/: CMakeLists.txt
src/libs/ini_data/: CmakeLists.txt
src/libs/input/: CMakeLists.txt
src/libs/logger/: CmakeLists.txt
src/libs/logger/logger-rs/: Cargo.toml  cbindgen.toml
src/libs/logger/logger-rs/src/: lib.rs  logger.rs
src/libs/math/: CMakeLists.txt
src/libs/renderer/: CMakeLists.txt  Effects.cpp  Effects.h  sdevice.cpp  sdevice.h  technique.cpp
src/libs/rust/: CMakeLists.txt
src/libs/rust/rust-rs/: Cargo.toml  cbindgen.toml
src/libs/rust/rust-rs/src/: common.rs  fs.rs  ini_data.rs  ini_parser.rs  lib.rs  logger.rs  string_compare.rs  string_utils.rs
src/libs/rust/rust-rs/src/common/: ffi.rs  mod.rs  storm_vector.rs
src/libs/rust/rust-rs/src/core/: mod.rs
src/libs/rust/rust-rs/src/fs/: dirs.rs  dyn_patches.rs  file_reader.rs  mod.rs
src/libs/sound_service/: CMakeLists.txt
src/libs/util/: CMakeLists.txt
src/libs/util/util-rs/: Cargo.toml  cbindgen.toml  memo.txt  test_data.txt
src/libs/util/util-rs/control_data/: ignore_case_index_of.txt
src/libs/util/util-rs/src/: fs.rs  lib.rs  string_compare.rs
src/libs/window/: CMakeLists.txt
src/libs/xinterface/: CMakeLists.txt
src/techniques-sha/: worldmap.sha
src/techniques-sha/interfaces/: battle_interface.sha  dialog_background.sha  game_interface.sha  interface_backscene.sha
src/techniques/worldmap/: worldmap.fx
(+563 files in other folders)
