[package]
name = "rust-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
log = "^0"
encoding_rs = "^0"
dirs-next = "^2"
chrono = { version = "^0", default-features = false, features = ["alloc", "clock"] }
globset = "^0"