[package]
name = "rust-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
log = "^0"
log4rs = { version = "^1", default-features = false, features = ["console_appender", "compound_policy", "size_trigger", "rolling_file_appender", "fixed_window_roller", "gzip"] }
encoding_rs = "^0"
dirs-next = "^2"
chrono = { version = "^0", default-features = false, features = ["alloc", "clock"] }
globset = "^0"
thiserror = "^1"
once_cell = "^1"