[package]
name = "util-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["staticlib"]

[dependencies]
dirs-next = "2.0"
regex = "1.5.5"
encoding_rs = "0.8"
globset = "0.4"
chrono = { version = "0.4.19", default-features = false, features = ["alloc", "clock"] }